# vlc_viewer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
.omc/: project-memory.json
.omc/sessions/: 31faf130-551a-4acd-a6db-92b3ad0a829a.json  41810a56-8e0d-4451-a9d6-c551925c0c60.json  4bcf31ef-5b74-4643-a41a-f2f61a0efc7e.json  624bb250-e913-4a09-b831-6fc2858df27c.json  8573a999-6463-489b-a771-57a2074d1aaf.json  904fb825-c72a-4faf-9886-66f7521f7da9.json  a9fecada-ea43-483f-9444-da57102e2e02.json  af922cee-2546-49db-aabf-0053617d4530.json  bbe2be5b-c2a4-4a64-9420-df835edee7ba.json  e72f5745-62cc-48ca-8b7d-730d9f55a21e.json
.omc/state/: agent-replay-1bd4cb3d-ddea-4f5c-afc7-5c88ab9678ef.jsonl  agent-replay-593e9bae-ec8c-4575-9b7e-5c4ddab67239.jsonl  agent-replay-e72f5745-62cc-48ca-8b7d-730d9f55a21e.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  subagent-tracking.json
.omc/state/sessions/1bd4cb3d-ddea-4f5c-afc7-5c88ab9678ef/: hud-state.json  session-started.json
.omc/state/sessions/904fb825-c72a-4faf-9886-66f7521f7da9/: hud-state.json
docs/: 2026-06-06-수정사항.md  2026-06-09-가짜연결-재접속루프-수정.md  mediamtx-relay-migration-guide.md  viewer-feature-definition.md  voxl2-mini-viewer-improvement-plan.md  voxl2-rtsp-network-access.md
ops/mediamtx/: mediamtx.yml
resources/: app.rc.in  logo.icns  resources.qrc
src/: ChannelInfoDialog.cpp  ChannelInfoDialog.h  ConnectionDialog.cpp  ConnectionDialog.h  MainWindow.cpp  MainWindow.h  MediaRelayManager.cpp  MediaRelayManager.h  ResourceMonitor.cpp  ResourceMonitor.h  StatusBar.cpp  StatusBar.h  Style.h  Version.h  VlcWidget.cpp  VlcWidget.h  main.cpp
src/.omc/state/: agent-replay-e72f5745-62cc-48ca-8b7d-730d9f55a21e.jsonl  idle-notif-cooldown.json  subagent-tracking.json
watchdog/: install.sh  uninstall.sh  voxl-streamer-watchdog  voxl-streamer-watchdog.conf  voxl-streamer-watchdog.service
watchdog/.omc/state/: agent-replay-593e9bae-ec8c-4575-9b7e-5c4ddab67239.jsonl  idle-notif-cooldown.json  subagent-tracking.json
